3.5.0/_sources/gallery/axisartist/demo_floating_axis.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/axisartist/demo_floating_axis.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_axisartist_demo_floating_axis.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_axisartist_demo_floating_axis.py:


==================
floating_axis demo
==================

Axis within rectangular frame.

The following code demonstrates how to put a floating polar curve within a
rectangular box. In order to get a better sense of polar curves, please look at
:doc:`/gallery/axisartist/demo_curvelinear_grid`.

.. GENERATED FROM PYTHON SOURCE LINES 12-69



.. image-sg:: /gallery/axisartist/images/sphx_glr_demo_floating_axis_001.png
   :alt: demo floating axis
   :srcset: /gallery/axisartist/images/sphx_glr_demo_floating_axis_001.png, /gallery/axisartist/images/sphx_glr_demo_floating_axis_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. code-block:: default


    import numpy as np
    import matplotlib.pyplot as plt
    import mpl_toolkits.axisartist.angle_helper as angle_helper
    from matplotlib.projections import PolarAxes
    from matplotlib.transforms import Affine2D
    from mpl_toolkits.axisartist import HostAxes
    from mpl_toolkits.axisartist import GridHelperCurveLinear


    def curvelinear_test2(fig):
        """Polar projection, but in a rectangular box."""
        # see demo_curvelinear_grid.py for details
        tr = Affine2D().scale(np.pi / 180., 1.) + PolarAxes.PolarTransform()

        extreme_finder = angle_helper.ExtremeFinderCycle(20,
                                                         20,
                                                         lon_cycle=360,
                                                         lat_cycle=None,
                                                         lon_minmax=None,
                                                         lat_minmax=(0,
                                                                     np.inf),
                                                         )

        grid_locator1 = angle_helper.LocatorDMS(12)

        tick_formatter1 = angle_helper.FormatterDMS()

        grid_helper = GridHelperCurveLinear(tr,
                                            extreme_finder=extreme_finder,
                                            grid_locator1=grid_locator1,
                                            tick_formatter1=tick_formatter1
                                            )

        ax1 = fig.add_subplot(axes_class=HostAxes, grid_helper=grid_helper)

        # Now creates floating axis

        # floating axis whose first coordinate (theta) is fixed at 60
        ax1.axis["lat"] = axis = ax1.new_floating_axis(0, 60)
        axis.label.set_text(r"$\theta = 60^{\circ}$")
        axis.label.set_visible(True)

        # floating axis whose second coordinate (r) is fixed at 6
        ax1.axis["lon"] = axis = ax1.new_floating_axis(1, 6)
        axis.label.set_text(r"$r = 6$")

        ax1.set_aspect(1.)
        ax1.set_xlim(-5, 12)
        ax1.set_ylim(-5, 10)

        ax1.grid(True)


    fig = plt.figure(figsize=(5, 5))
    curvelinear_test2(fig)
    plt.show()


.. _sphx_glr_download_gallery_axisartist_demo_floating_axis.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: demo_floating_axis.py <demo_floating_axis.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: demo_floating_axis.ipynb <demo_floating_axis.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
